style(form): fix label stuck to input field on Jobs tab

--- a/web-controller/src/client/components/styles/jobs.css
+++ b/web-controller/src/client/components/styles/jobs.css
@@ -1,18 +1,20 @@
 @import "colors.css";
 
-.jobs-container {
+form {
+    .jobs-container {
 
-    > button {
-        align-self: flex-end;
-        background-color: $green;
-    }
+        > button {
+            align-self: flex-end;
+            background-color: $green;
+        }
 
-    .fieldset {
-        label, button {
-            margin-left: 2em;
+        .fieldset {
+            label, button {
+                margin-left: 2em;
 
-            &:first-child {
-                margin-left: 0;
+                &:first-child {
+                    margin-left: 0;
+                }
             }
         }
     }
